# models

./: README.md  pyproject.toml
Notebooks/: curve-stableswap-whitepaper.ipynb  uniswap-math.ipynb
Notebooks/bancor/: Exponential.ipynb  bancor.ipynb
Notebooks/curve/: curve-stableswap-curvesim.ipynb  curve-stableswap-whitepaper-broken.ipynb
Notebooks/uniswap/: uniswap-mathv2.ipynb
